created header section and make it responsive

--- a/index.html
+++ b/index.html
@@ -8,6 +8,26 @@
     <link rel="stylesheet" href="styles/responsive.css">
 </head>
 <body>
-    <h1>Testing...</h1>
+    <header class="header">
+      <!-- navbar section starts here -->
+      <nav class="header-section">
+        <div class="nav-container">
+            <img src="images/Logo/logo.png" alt="">
+            <p>Awesome<span class="special">Shop</span></p>
+        </div>
+        <div class="items-container">
+            <a href="">Home</a>
+            <a href="">Products</a>
+            <a href="">Gallery</a>
+            <a href="">Discount</a>
+            <div class="login-button">
+                <a href="">Login</a>
+            </div>
+        </div>
+      </nav>
+      <!-- navbar section ends here -->
+    </header>
+    <main></main>
+    <footer></footer>
 </body>
 </html>
