--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Awesome Shop</title>
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="styles/responsive.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <header class="header">
@@ -27,7 +28,30 @@
       </nav>
       <!-- navbar section ends here -->
     </header>
-    <main></main>
+    <main>
+      <section class="banner-section">
+        <!-- banner section starts here -->
+        <div class="text-container">
+            <h1 class="banner-heading">Man Bags</h1>
+            <p id="collections">New Man's Collections</p>
+            <div class="icons">
+                <span><i style="color: blue;" class="fa-brands fa-facebook"></i></span>
+                <span><i style="color: red;" class="fa-brands fa-youtube"></i></span>
+                <span><i style="color: skyblue;" class="fa-brands fa-twitter"></i></span>
+                <span><i style="color: violet;" class="fa-brands fa-instagram"></i></span>
+            </div>
+            <div>
+                <button class="common-button">Show More</button>
+                <button  class="common-button">Shop Me</button>
+            </div>
+        </div>
+        <div class="banner-image-container">
+            <img src="images/banner-image/bag-picture.jpg" alt="">
+            <div class="discount">30%</div>
+        </div>
+        <!-- banner section ends here -->
+      </section>
+    </main>
     <footer></footer>
 </body>
 </html>
