finished products section and responsive

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
       <!-- navbar section ends here -->
     </header>
     <main>
+      <!-- banner section starts here -->
       <section class="banner-section">
-        <!-- banner section starts here -->
         <div class="text-container">
             <h1 class="banner-heading">Man Bags</h1>
             <p id="collections">New Man's Collections</p>
@@ -49,8 +49,68 @@
             <img src="images/banner-image/bag-picture.jpg" alt="">
             <div class="discount">30%</div>
         </div>
-        <!-- banner section ends here -->
       </section>
+      <!-- banner section ends here -->
+
+      <!-- products section starts here -->
+      <section class="product-section">
+        <h1 style="text-align: center;">Products</h1>
+        <div class="grid-container">
+            <div class="single-product">
+                <img src="images/products/bag.png" alt="">
+                <div class="heading-icons">
+                    <h2>Product 1</h2>
+                    <div>
+                        <span><i class="fa-solid fa-cart-shopping"></i></span>
+                        <span><i class="fa-solid fa-credit-card"></i></span>
+                        <span><i class="fa-solid fa-eye"></i></span>
+                    </div>
+                </div>
+                <p style="font-size: 16px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis, odit!</p>
+                <button class="common-button">BUY</button>
+            </div>
+            <div class="single-product">
+                <img src="images/products/bag.png" alt="">
+                <div class="heading-icons">
+                    <h2>Product 1</h2>
+                    <div>
+                        <span><i class="fa-solid fa-cart-shopping"></i></span>
+                        <span><i class="fa-solid fa-credit-card"></i></span>
+                        <span><i class="fa-solid fa-eye"></i></span>
+                    </div>
+                </div>
+                <p style="font-size: 16px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis, odit!</p>
+                <button class="common-button">BUY</button>
+            </div>
+            <div class="single-product">
+                <img src="images/products/bag.png" alt="">
+                <div class="heading-icons">
+                    <h2>Product 1</h2>
+                    <div>
+                        <span><i class="fa-solid fa-cart-shopping"></i></span>
+                        <span><i class="fa-solid fa-credit-card"></i></span>
+                        <span><i class="fa-solid fa-eye"></i></span>
+                    </div>
+                </div>
+                <p style="font-size: 16px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis, odit!</p>
+                <button class="common-button">BUY</button>
+            </div>
+            <div class="single-product">
+                <img src="images/products/bag.png" alt="">
+                <div class="heading-icons">
+                    <h2>Product 1</h2>
+                    <div>
+                        <span><i class="fa-solid fa-cart-shopping"></i></span>
+                        <span><i class="fa-solid fa-credit-card"></i></span>
+                        <span><i class="fa-solid fa-eye"></i></span>
+                    </div>
+                </div>
+                <p style="font-size: 16px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis, odit!</p>
+                <button class="common-button">BUY</button>
+            </div>
+        </div>
+      </section>
+      <!-- products section endss here -->
     </main>
     <footer></footer>
 </body>
