created simple gallery section with mobile responsive

--- a/index.html
+++ b/index.html
@@ -54,8 +54,34 @@
 
       <!-- products section starts here -->
       <section class="product-section">
-        <h1 style="text-align: center;">Products</h1>
+        <h1 style="text-align: center; font-size: 30px;">Products</h1>
         <div class="grid-container">
+            <div class="single-product">
+                <img src="images/products/bag.png" alt="">
+                <div class="heading-icons">
+                    <h2>Product 1</h2>
+                    <div>
+                        <span><i class="fa-solid fa-cart-shopping"></i></span>
+                        <span><i class="fa-solid fa-credit-card"></i></span>
+                        <span><i class="fa-solid fa-eye"></i></span>
+                    </div>
+                </div>
+                <p style="font-size: 16px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis, odit!</p>
+                <button class="common-button">BUY</button>
+            </div>
+            <div class="single-product">
+                <img src="images/products/bag.png" alt="">
+                <div class="heading-icons">
+                    <h2>Product 1</h2>
+                    <div>
+                        <span><i class="fa-solid fa-cart-shopping"></i></span>
+                        <span><i class="fa-solid fa-credit-card"></i></span>
+                        <span><i class="fa-solid fa-eye"></i></span>
+                    </div>
+                </div>
+                <p style="font-size: 16px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis, odit!</p>
+                <button class="common-button">BUY</button>
+            </div>
             <div class="single-product">
                 <img src="images/products/bag.png" alt="">
                 <div class="heading-icons">
@@ -111,6 +137,38 @@
         </div>
       </section>
       <!-- products section endss here -->
+
+      <!-- gallery section starts here -->
+      <section class="gallery-section">
+        <h1 style="text-align: center; font-size: 30px; margin-bottom: 30px;">Gallery</h1>
+        <div class="gallery-container">
+            <div class="single-gallery">
+                <img src="images/products/bag.png" alt="">
+            </div>
+            <div class="single-gallery">
+                <img src="images/products/bag.png" alt="">
+            </div>
+            <div class="single-gallery">
+                <img src="images/products/bag.png" alt="">
+            </div>
+            <div class="single-gallery">
+                <img src="images/products/bag.png" alt="">
+            </div>
+            <div class="single-gallery">
+                <img src="images/products/bag.png" alt="">
+            </div>
+            <div class="single-gallery">
+                <img src="images/products/bag.png" alt="">
+            </div>
+            <div class="single-gallery">
+                <img src="images/products/bag.png" alt="">
+            </div>
+            <div class="single-gallery">
+                <img src="images/products/bag.png" alt="">
+            </div>
+        </div>
+      </section>
+      <!-- gallery section ends here -->
     </main>
     <footer></footer>
 </body>
